deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    db: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongodb
  template:
    metadata:
      labels:
        db: mongodb
    spec:
      volumes:
        - name: mongodb-data
          gcePersistentDisk:
            pdName: mongodb
            fsType: ext4
      containers:
        - name: mongodb
          image: mongo:4.0.4
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    db: mongodb
