deployment-person-service.yml
apiVersion: v1
kind: Service
metadata:
  name: person-service
  labels:
    app: person-service
spec:
  ports:
  - port: 8080
    name: http-person
    protocol: TCP
    targetPort: 8080
  selector:
    app: person-service
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-service
  labels:
    app: person-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
       labels:
         app: person-service
    spec:
      containers:
        - name: person-app
          image: gcr.io/ultimate-hydra-288114/person-boot-app-gcloud:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
