gcloud-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gcloud-ingress
spec:
  backend:
    serviceName: person-service
    servicePort: http-person
